# QuietDrop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUES_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml
docs/: API.md  BUILDING_AND_PACKAGING.md  DETAILED_DOCS.md  ENCRYPTION.md  FRONTEND_DEVELOPMENT.md  PROJECT_ROADMAP.md  SECURITY.md  TAURI_ARCHITECTURE.md
quietdrop-cli/: Cargo.toml
quietdrop-cli/src/: main.rs
quietdrop-core/: Cargo.toml
quietdrop-core/src/: authentication.rs  client.rs  lib.rs  main.rs  message.rs
quietdrop-core/tests/: authentication_test.rs  client_server_test.rs  encryption_integration_tests.rs  message_test.rs
quietdrop-tauri/: Cargo.toml  Trunk.toml  index.html
quietdrop-tauri/src/: main.rs
quietdrop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
quietdrop-tauri/src-tauri/src/: main.rs
quietdrop-tauri/styles/: main.scss
quietdrop-ui/: Cargo.toml
quietdrop-ui/src-tauri/: Cargo.toml
quietdrop-ui/src-tauri/src/: main.rs
src/: authentication.rs  client.rs  encryption.rs  lib.rs  main.rs  message.rs  server.rs
tests/: README.md  client_server_test.rs  encryption_integration_tests.rs  message_test.rs
