[package]
name = "quietdrop-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"