[package]
name = "quietdrop-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
quietdrop-core = { path = "../../quietdrop-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-alpha.4", features = ["shell-open"] }
tokio = { version = "1.0", features = ["full"] }
